--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 <div class="card">
 	<div class="flexColumnLeft">
-		<img class="cardImage" src="assets/images/illustration-article.svg"></img>
+		<img class="cardImage" src="assets/images/illustration-article.svg" alt="Card cover photo"></img>
 		
 		<div class="learningButton">
 			<p class="p1">
@@ -43,7 +43,7 @@
 			</p>	
 			
 			<div style="display: flex;">
-				<img class="avatar" src="assets/images/image-avatar.webp"></img>
+				<img class="avatar" src="assets/images/image-avatar.webp" alt="Avatar"></img>
 				<p class="p4">
 					Greg Hooper
 				</p>
